# ToDoTrainee

./: .black  .flake8  .pre-commit-config.yaml  main_requirements.txt  mypy.ini
.github/workflows/: check.yml
todo-auth-service/: pyproject.toml
todo-backend-service/: requirements.txt
todo_auth_service/: pyproject.toml
todo_backend_service/todo_project/: settings.py
todo_backend_service/todo_project_api/: admin.py  apps.py  managers.py  models.py
